# ai-slack-chatbot-tutorial

./: .gitignore  README.md  pyproject.toml  requirements.txt  template.yaml
src/functions/api/post/: function.py
src/functions/worker/reply/: function.py
