[project]
name = "ai-slack-chatbot-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.11",
    "slack-sdk>=3.34.0",
]

[tool.ruff.lint]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]
ignore = [
    "E501", # line too long
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.taskipy.tasks]
export = "uv pip compile pyproject.toml > requirements.txt"
